# learn-rust

./: .env  .gitignore  BINARY_SIZE_OPTIMIZATION.md  Cargo.toml  Dockerfile  README.MD  README.md  ROADMAP.MD  application.yaml  changelog.md  docker-compose.yaml  domains.json  reamde.md  start.sh  测试接口.http
crates/agent-management/: API.md  Cargo.toml  README.md  build.rs
crates/agent-management-client/: Cargo.toml  build.rs
crates/agent-management-client/src/: client.rs  lib.rs
crates/agent-management/frontend/: package-lock.json  tailwind.config.js  vite.config.js
crates/agent-management/src/: config.rs  domain.rs  lib.rs  main.rs  protocol.rs  service.rs  storage.rs
crates/agent-management/src/domain/: state_machine.rs
crates/agent-management/src/server/: grpc.rs  mod.rs  rest.rs  websocket.rs
crates/agent-management/src/service/: agent.rs  diagnostic.rs  health.rs  lifecycle.rs  mod.rs
crates/agent-management/src/storage/: mod.rs
crates/agent-management/tests/: agent_service_tests.rs  lifecycle_service_tests.rs
crates/domain-agent-management/frontend/dist-wrap/: Cargo.toml  README.md
crates/domain-agent-protocol/: Cargo.toml
crates/domain-agent-protocol/src/: diagnostic.rs  lib.rs  lifecycle.rs
crates/domain-manager/: Cargo.toml  Makefile  ROADMAP.MD  build-msi.ps1  build.rs  fix_country_match.ps1  fix_flags.ps1  事件处理架构重构需求调研文档.md
crates/domain-manager/.github/workflows/: build.yml
crates/domain-manager/config/: data.json
crates/domain-manager/configs/: config.json  logging_config_example.json
crates/domain-manager/locales/: en.yml  zh_CN.yml
crates/domain-manager/resources/migrations/: 001_initial_schema.sql
crates/domain-manager/scripts/: build-linux.sh  build-msi.ps1  build-windows.ps1  build.ps1
crates/domain-manager/src/: error.rs  main.rs
crates/domain-manager/src/agent/: connection.rs  heartbeat.rs  mod.rs  model.rs  protocol.rs  registry.rs
crates/domain-manager/src/api/: ali_api.rs  aliyun_dns_api.rs  dns_client.rs  dns_integration.rs  mod.rs
crates/domain-manager/src/client/: agent_client.rs  mod.rs
crates/domain-manager/src/configs/: config_settings.rs  database.rs  gui_config.rs  logging_config.rs  mod.rs
crates/domain-manager/src/countries/: country_utils.rs
crates/domain-manager/src/gui/: manager_v2.rs
crates/domain-manager/src/models/: mod.rs
crates/domain-manager/src/storage/: accounts.rs  agents.rs  database.rs  encryption.rs  mod.rs  records.rs
crates/domain-manager/src/tests/: dns_sync_tests.rs  i18n_tests.rs  iced_integration_tests.rs  mock_aliyun_client.rs  mod.rs  provider_handler_tests.rs
crates/domain-manager/src/translations/: translations.rs  translations_2.rs  translations_3.rs
crates/domain-manager/src/utils/: clipboard.rs  formatted_strings.rs
crates/domain-manager/wix/: domain-manager.wxs
crates/domain_agent/: Cargo.toml  DEPLOY.md  docker-compose.yml
crates/domain_agent/src/: client.rs  config.rs  crypto.rs  main.rs  tunnel.rs
crates/domain_client/: Cargo.toml
crates/domain_client/src/: lib.rs  main.rs  mod.rs
crates/domain_manager/: CLAUDE.md  Cargo.optimized.toml  Cargo.toml  Dockerfile  Makefile  README.md  REFACTOR_PLAN.md  ROADMAP.MD  build_output.txt  changelog.md  check_output.txt  check_output2.txt  check_output3.txt  check_output4.txt  check_output_current.txt  check_output_current2.txt  check_output_final.txt  check_output_final2.txt  check_output_latest.txt  check_output_new.txt  docker-compose.yml  optimize_resources.ps1  方案一详细实施方案.md
crates/domain_manager/.github/workflows/: build.yml
crates/domain_manager/config/: config.json  logging_config_both.json  logging_config_file.json
crates/domain_manager/locales/: en.yml  zh-CN.yml  zh_CN.yml
crates/domain_manager/resources/migrations/: 001_initial_schema.sql
crates/domain_manager/scripts/: build-installer.ps1
crates/domain_manager/src/: ali_api.rs  dm_logger.rs  dns_record_response.rs  domain.rs  locale.rs  main.rs
crates/domain_manager/src/agent/: connection.rs  heartbeat.rs  model.rs  protocol.rs  registry.rs  service.rs
crates/domain_manager/src/api/: ali_api.rs  aliyun_dns_api.rs  credential_service.rs  dns_api.rs  dns_client.rs  dns_integration.rs  mod.rs
crates/domain_manager/src/cli/: mod.rs
crates/domain_manager/src/configs/: config.rs  config_settings.rs  config_window.rs  database.rs  gui_config.rs  logging_config.rs  mod.rs  server.rs
crates/domain_manager/src/countries/: country_utils.rs  flags_pictures.rs
crates/domain_manager/src/gui/: icon.rs  manager.rs  manager_v2.rs  mod.rs  screen.rs
crates/domain_manager/src/mmdb/: asn.rs  country.rs
crates/domain_manager/src/model/: dns_operate.rs  dns_record_response.rs  domain.rs  mod.rs
crates/domain_manager/src/models/: account.rs  domain.rs  mod.rs  record.rs
crates/domain_manager/src/storage/: accounts.rs  agents.rs  database.rs  domains.rs  encryption.rs  migrations.rs  mod.rs  records.rs
crates/domain_manager/src/tests/: dns_sync_tests.rs  iced_integration_tests.rs  mock_aliyun_client.rs  mod.rs  provider_handler_tests.rs  test_utils.rs
crates/domain_manager/src/translations/: translations.rs  translations_4.rs
crates/domain_manager/src/types/: dns.rs  mod.rs
crates/domain_manager/src/utils/: aliyun_utils.rs  error_logger.rs  formatted_strings.rs  i18_utils.rs  mod.rs
crates/domain_manager/src/view/: colors.rs  domain.rs  domain_dns_record.rs  mod.rs  theme.rs  utils.rs
crates/domain_manager/wix/: domain_manager.wxs
crates/domain_server/: Cargo.toml
crates/domain_server/src/: database.rs  main.rs
crates/domain_server/src/config/: database.rs
crates/domain_server/src/entities/: domain.rs  mod.rs  provider.rs
crates/domain_server/src/handlers/: dns_record.rs  mod.rs  provider.rs
crates/domain_server/src/migrations/: mod.rs
crates/domain_server/src/templates/: base.html  domains.html  index.html  (+1 more)
crates/domain_stun/: .dockerignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md  docker-compose.yml
crates/domain_stun/src/: config.rs  main.rs
crates/domain_stun/templates/: agents.html  dashboard.html
(+326 files in other folders)
