[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[workspace.package]
edition = "2021"
homepage = "https://stanic.xyz/"
license = "Mulan PSL v2"
repository = "https://stanic.xyz"

[workspace]
members = [
    "crates/domain_client",
    "crates/domain_server",
    "crates/domain_manager",
    "crates/http_server",
    "crates/domain_agent",
    "crates/domain_stun"]
resolver = "2"

[dependencies]

[workspace.dependencies]
bytes.version = "1"
