[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[workspace.package]
edition = "2021"
homepage = "https://stanic.xyz/"
license = "Mulan PSL v2"
repository = "https://stanic.xyz"

[workspace]
members = [
    "crates/agent-protocol",
    "crates/agent-management",
    "crates/domain-clients",
    "crates/domain-server",
    "crates/domain-manager",
    "crates/domain-http-server",
    "crates/domain-agent",
    "crates/domain-stun"]
resolver = "2"

[dependencies]

[workspace.dependencies]
bytes.version = "1"
