[package]
name = "netops"
version = "0.1.0"
edition = "2021"

[workspace.package]
edition = "2021"
homepage = "https://stanic.xyz/"
license = "Mulan PSL v2"
repository = "https://stanic.xyz"

[workspace]
members = [
    "crates/domain-agent-protocol",
    "crates/domain-agent-management",
    "crates/domain-agent-management-client",
    "crates/domain-clients",
    "crates/domain-server",
    "crates/domain-manager",
    "crates/domain-http-server",
    "crates/domain-agent",
    "crates/domain-stun"
]
resolver = "2"

exclude = [
    "docs",
    ".github",
    "static",
]

[dependencies]
mimalloc = { version = "*", features = ["secure"] }

[workspace.dependencies]
bytes.version = "1"

[lints.clippy]
uninlined_format_args = "allow"
