[package]
name = "agent-management"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-protocol = { path = "../agent-protocol" }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tonic = "0.12"
prost = "0.13"
prost-build = "0.13"
async-trait = "0.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["runtime-tokio", "sqlx-postgres", "with-uuid", "with-chrono"] }
sea-orm-migration = "1.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"

[[bin]]
name = "agent-management"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.12"
