[package]
name = "domain-manager"
version = "0.1.0"
edition = "2021"

default-run = "domain-manager"

repository.workspace = true

[dependencies]
domain-agent-management-client = { path = "../domain-agent-management-client" }
domain-clients = { path = "../domain-clients" }

# GUI - iced 需要 advanced 特性用于 class() 方法
iced = { version = "0.13.1", features = ["svg", "tokio", "wgpu", "advanced"], default-features = false }
# 图表 - 只启用需要的系列
plotters = { version = "0.3.7", default-features = false, features = ["area_series", "line_series"] }
# 图像处理 - 只支持 png
image = { version = "0.25.6", default-features = false, features = ["png"] }
rust-i18n = "3.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 使用 rustls-tls，跨平台一致
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.46.1", default-features = false, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
confy = { version = "1.0.0", default-features = false, features = ["yaml_conf"] }
# cloudflare = "0.14.0"
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.1"
secrecy = { version = "0.10.3", features = ["serde"] }
directories = "6.0.0"
anyhow = "1.0.98"
arboard = "3.4"
base64 = "0.22.1"
# Sea-ORM - 默认使用 SQLite，只在需要时启用 postgres
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio", "macros", "with-uuid", "with-chrono"] }
sea-orm-migration = "1.1"
tracing = { version = "0.1.41", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "tracing-log"] }
percent-encoding = "2.3.1"
config = { version = "0.15.13", features = ["yaml"] }
uuid = { version = "1.17.0", features = ["v4", "v5", "serde"] }
sha2 = "0.11.0"
hex = "0.4.3"
async-trait = "0.1.83"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
# mimalloc = "0.1.52"

[dev-dependencies]
serde_test = "1.0.177"

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.wix]
upgrade-guid = "12345678-1234-1234-1234-123456789012"
path-guid = "87654321-4321-4321-4321-210987654321"
license = false
eula = false

[[bin]]
name = "domain-manager"
