[package]
name = "domain_agent"
version = "0.1.0"
edition = "2021"
description = "Domain Manager Agent - connects to Domain Manager Hub"
authors = ["Stan <stanic@example.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
hostname = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
