[package]
name = "domain_client"
version = "0.1.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

serde_json = "1.0.140"
rand = "0.9.1"
sha2 = "0.11.0-rc.0"
chrono = "0.4.41"
hmac = "0.13.0-rc.3"
hex = "0.4.3"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] }
percent-encoding = "2.3.1"
