[package]
name = "domain_manager"
version = "0.0.1"
edition = "2021"

default-run = "domain_manager"

repository.workspace = true

[dependencies]
domain_client = { path = "../domain_client" }

iced = { version = "0.13.1", features = ["svg", "advanced", "lazy", "image", "tokio"] }
image = { version = "0.25.6" }
maxminddb = { version = "0.26.0" }
plotters = { version = "0.3.7", default-features = false, features = ["area_series", "line_series"] }
rust-i18n = { version = "3.1.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["default"] }
toml = { version = "0.9.1" }
chrono = { version = "0.4.41" }
confy = { version = "1.0.0" }
cloudflare = { version = "0.14.0" }
clap = { version = "4.5.41", features = ["derive"] }
rand = { version = "0.9.2" }
secrecy = { version = "0.10.3" }
directories = { version = "6.0.0" }
anyhow = { version = "1.0.98" }
base64 = { version = "0.22.1" }
mockall = "0.13.1"
sea-orm = { version = "2.0.0-rc.1", features = ["sqlx-postgres", "sqlx-sqlite", "macros", "with-uuid", "with-chrono", "runtime-tokio", "debug-print", "with-json", "with-rust_decimal", "runtime-tokio-native-tls"] }
sea-orm-migration = "2.0.0-rc.1"
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-test = { version = "0.2.5" }
percent-encoding = "2.3.1"
config = { version = "0.15.13", features = ["yaml"] }
num_cpus = "1.17.0"
uuid = { version = "1.17.0", features = ["v4"] }
log = "0.4.22"


[dev-dependencies]
serde_test = "1.0.177"
serial_test = { version = "3.2.0", default-features = false }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.wix]
include = [".\\resources\\packaging\\windows\\setup.wxs"]


[[bin]]
name = "domain_manager"
