[package]
name = "domain_manager"
version = "0.0.1"
edition = "2021"

default-run = "domain_manager"

repository.workspace = true

[dependencies]
domain_client = { path = "../domain_client" }

iced = { version = "0.13.1", features = ["svg", "tokio", "wgpu", "advanced"], default-features = false }
iced_fontello = { version = "0.13.1" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
maxminddb = { version = "0.26.0" }  # 地理位置数据库
plotters = { version = "0.3.7", default-features = false, features = ["area_series", "line_series"] }  # 图表绘制
rust-i18n = { version = "3.1.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "net", "time"], default-features = false }
toml = { version = "0.9.1", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
confy = { version = "1.0.0" }
cloudflare = { version = "0.14.0" }  # Cloudflare API客户端
clap = { version = "4.5.41", features = ["derive"] }
rand = { version = "0.9.1" }
secrecy = { version = "0.10.3" }
directories = { version = "6.0.0" }
anyhow = { version = "1.0.98" }
base64 = { version = "0.22.1" }
mockall = "0.13.1"
sea-orm = { version = "2.0.0-rc.6", features = ["sqlx-sqlite", "sqlx-postgres", "macros", "with-uuid", "with-chrono", "runtime-tokio", "with-json"], default-features = false }
sea-orm-migration = "2.0.0-rc.1"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], default-features = false }
# tracing-test = { version = "0.2.5" }  # 仅开发时需要，生产环境禁用
percent-encoding = "2.3.1"
config = { version = "0.15.13", features = ["yaml"] }
num_cpus = "1.17.0"
uuid = { version = "1.17.0", features = ["v4"] }
async-trait = "0.1.83"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
serde_test = "1.0.177"
serial_test = { version = "3.2.0", default-features = false }
tracing-test = "0.2.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"  # 优化代码大小
lto = true       # 启用链接时优化
codegen-units = 1 # 减少代码生成单元以提高优化效果
panic = "abort"   # 使用abort而不是unwind来减小二进制大小
strip = true     # 移除调试符号

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.wix]
upgrade-guid = "12345678-1234-1234-1234-123456789012"
path-guid = "87654321-4321-4321-4321-210987654321"
include = ["wix/domain_manager.wxs"]
license = false
eula = false


[[bin]]
name = "domain_manager"
