[package]
name = "domain_server"
version = "0.1.0"
edition = "2021"

default-run = "domain_server"

repository.workspace = true

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
dotenv = "0.15"
uuid = { version = "1.18", features = ["v4"] }
async-trait = "0.1.88"
serde_json = "1.0.134"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "macros", "with-uuid", "with-chrono", "runtime-tokio", "debug-print", "with-json", "with-rust_decimal"] }
sea-orm-migration = "1.1.12"
anyhow = "1.0.98"
config = { version = "0.15.13", features = ["yaml"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
percent-encoding = "2.3.1"
num_cpus = "1.17.0"

[[bin]]
name = "domain_server"