[package]
name = "domain_stun"
version = "0.1.0"
edition = "2021"
description = "STUN/TURN server for Domain Agent NAT traversal"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Template engine
tera = "1"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
sqlx-sqlite = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.15"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
rand = "0.8"
bytes = "1"

# Error handling
tracing-error = "0.2"

[[bin]]
name = "domain_stun"
path = "src/main.rs"
